[gd_scene load_steps=39 format=2]

[ext_resource path="res://assets/player/player.png" type="Texture" id=1]
[ext_resource path="res://assets/player/cd_bar.png" type="Texture" id=2]
[ext_resource path="res://scr/actors/Camera2D.gd" type="Script" id=3]
[ext_resource path="res://scr/actors/PlayerClass.gd" type="Script" id=4]
[ext_resource path="res://assets/roundshadow.png" type="Texture" id=5]
[ext_resource path="res://scr/bullets/PB2.tscn" type="PackedScene" id=6]
[ext_resource path="res://scr/bullets/PB1.tscn" type="PackedScene" id=7]
[ext_resource path="res://scr/bullets/PB0.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/player/aim.png" type="Texture" id=9]
[ext_resource path="res://scr/bullets/PB3.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/player/aimnormal.png" type="Texture" id=11]

[sub_resource type="CircleShape2D" id=1]
radius = 32.2163

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

render_mode blend_add;

uniform float pixel_size = 0.03;

uniform float intensity = 1.18f;
uniform float layers = 5f;
uniform float speed = 0.3f;
uniform float size = 0.4f;

float gradient(vec2 uv){
    return (size - distance(vec2(uv.x, uv.y), vec2(0.5f, 0.5f))); 
}

vec4 colorize(float c, float a){
    vec4 pallete;
    pallete = vec4(c,c,c,a);
    pallete.r = float(c >= 1f);
    pallete.a = c;
    return pallete;
}

void fragment(){
	
    vec2 uv = UV - TIME * speed;
    uv -= mod(uv, vec2(pixel_size, pixel_size));
    vec4 bg = textureLod(TEXTURE, uv, 0.0);
    
    COLOR.r = gradient(UV);
    COLOR.r = clamp(COLOR.r * bg.r * intensity * 10f, 0f, 1f);
    COLOR.r = floor(COLOR.r * layers) / layers;
    COLOR.a = float(COLOR.r > 0f);
    COLOR = colorize(COLOR.r, COLOR.a);
	
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/pixel_size = -0.004
shader_param/intensity = 3.705
shader_param/layers = 5.0
shader_param/speed = -0.009
shader_param/size = 0.124

[sub_resource type="OpenSimplexNoise" id=4]
seed = 10
octaves = 5
period = 0.1
persistence = 0.009
lacunarity = 1.78

[sub_resource type="NoiseTexture" id=5]
seamless = true
noise = SubResource( 4 )

[sub_resource type="Shader" id=6]
code = "shader_type canvas_item;

render_mode blend_add;

uniform float pixel_size = 0.03;

uniform float intensity = 1.18f;
uniform float layers = 5f;
uniform float speed = 0.3f;
uniform float size = 0.4f;

float gradient(vec2 uv){
    return (size - distance(vec2(uv.x, uv.y), vec2(0.5f, 0.5f))); 
}

vec4 colorize(float c, float a){
    vec4 pallete;
    pallete = vec4(c,c,c,a);
    pallete.r = float(c >= 1f);
    pallete.a = c;
    return pallete;
}

void fragment(){
	
    vec2 uv = UV - TIME * speed;
    uv -= mod(uv, vec2(pixel_size, pixel_size));
    vec4 bg = textureLod(TEXTURE, uv, 0.0);
    
    COLOR.r = gradient(UV);
    COLOR.r = clamp(COLOR.r * bg.r * intensity * 10f, 0f, 1f);
    COLOR.r = floor(COLOR.r * layers) / layers;
    COLOR.a = float(COLOR.r > 0f);
    COLOR = colorize(COLOR.r, COLOR.a);
	
}"

[sub_resource type="ShaderMaterial" id=7]
shader = SubResource( 6 )
shader_param/pixel_size = 0.004
shader_param/intensity = 1.898
shader_param/layers = 5.0
shader_param/speed = 0.01
shader_param/size = 0.173

[sub_resource type="Shader" id=8]
code = "/*
Shader from Godot Shaders - the free shader library.
godotshaders.com/shader/teleport-effect

This shader is under CC0 license. Feel free to use, improve and 
change this shader according to your needs and consider sharing 
the modified result on godotshaders.com.
*/

shader_type canvas_item;

uniform float progress : hint_range(0.0, 1.0);
uniform float noise_desnity = 60;
uniform float beam_size : hint_range(0.01, 0.15);
uniform vec4 color : hint_color = vec4(0.0, 1.02, 1.2, 1.0);

// We are generating our own noise here. You could experiment with the 
// built in SimplexNoise or your own noise texture for other effects.
vec2 random(vec2 uv){
    uv = vec2( dot(uv, vec2(127.1,311.7) ),
               dot(uv, vec2(269.5,183.3) ) );
    return -1.0 + 2.0 * fract(sin(uv) * 43758.5453123);
}

float noise(vec2 uv) {
    vec2 uv_index = floor(uv);
    vec2 uv_fract = fract(uv);

    vec2 blur = smoothstep(0.0, 1.0, uv_fract);

    return mix( mix( dot( random(uv_index + vec2(0.0,0.0) ), uv_fract - vec2(0.0,0.0) ),
                     dot( random(uv_index + vec2(1.0,0.0) ), uv_fract - vec2(1.0,0.0) ), blur.x),
                mix( dot( random(uv_index + vec2(0.0,1.0) ), uv_fract - vec2(0.0,1.0) ),
                     dot( random(uv_index + vec2(1.0,1.0) ), uv_fract - vec2(1.0,1.0) ), blur.x), blur.y) * 0.5 + 0.5;
}

void fragment()
{
	vec4 tex = texture(TEXTURE, UV);
	
	float noise = noise(UV * noise_desnity) * UV.y;
	
	float d1 = step(progress, noise);
	float d2 = step(progress - beam_size, noise);
	
	vec3 beam = vec3(d2 - d1) * color.rgb;
	
	tex.rgb += beam;
	tex.a *= d2;
	
	COLOR = tex;
}"

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )
shader_param/progress = 0.0
shader_param/noise_desnity = 60.0
shader_param/beam_size = 0.062
shader_param/color = Color( 1.2, 0, 0, 1 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 12 ) ],
"loop": false,
"name": "shoot",
"speed": 5.0
} ]

[sub_resource type="Curve" id=15]
_data = [ Vector2( 0, 1 ), 0.0, -2.41667, 0, 0, Vector2( 1, 0 ), -0.538279, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=16]
offsets = PoolRealArray( 0, 0.00662252, 1 )
colors = PoolColorArray( 0.0805625, 0.0805625, 0.0805625, 1, 0, 0, 0, 1, 0.243137, 0.243137, 0.243137, 0.960784 )

[sub_resource type="Curve" id=17]
_data = [ Vector2( 0, 0.231818 ), 0.0, 0.0, 0, 0, Vector2( 0.491103, 0.918182 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.240909 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=18]
offsets = PoolRealArray( 0, 0.565891, 1 )
colors = PoolColorArray( 0.476562, 1, 0, 1, 0, 0, 0, 1, 0.824219, 0.526934, 0.106247, 1 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 10, 20 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 10, 0, 10, 20 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 20, 0, 10, 20 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 0, 20, 10, 20 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=24]
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.8, 1.7 ),
"transitions": PoolRealArray( 1.8025, 1 ),
"update": 0,
"values": [ 0.0, 0.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/CPUParticles2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.7 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BlackHoleCdBar:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Camera2D:zoom")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.8, 1.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=25]
length = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Light2D:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/CPUParticles2D:hue_variation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite/Light2D:energy")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.5 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite/CPUParticles2D:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite:material:shader_param/progress")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("BlackHoleCdBar:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Hurt:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Camera2D:zoom")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=26]
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.8, 1.7 ),
"transitions": PoolRealArray( 1.8025, 1 ),
"update": 0,
"values": [ 0.0, 0.5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/CPUParticles2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BlackHoleCdBar:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.470588, 0.470588, 0.470588, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Camera2D:zoom")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 0.5 ) ]
}

[sub_resource type="Animation" id=27]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0.9, 1 ), Vector2( 1, 0.9 ), Vector2( 0.9, 1 ), Vector2( 1, 0.9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/CPUParticles2D:hue_variation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.2, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hurt:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
z_as_relative = false
collision_mask = 252
script = ExtResource( 4 )
bullets_array = [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 10 ) ]

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 1024
limit_bottom = 1024
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="Camera2D"]
one_shot = true

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.219608 )
shape = SubResource( 1 )

[node name="Shield" type="Sprite" parent="."]
visible = false
modulate = Color( 0, 0.411765, 0.552941, 1 )
material = SubResource( 3 )
texture = SubResource( 5 )

[node name="Hurt" type="Sprite" parent="."]
visible = false
modulate = Color( 0.552941, 0, 0.0117647, 1 )
material = SubResource( 7 )
texture = SubResource( 5 )

[node name="Sprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.407843, 0, 1, 1 )
material = SubResource( 9 )
frames = SubResource( 14 )

[node name="Light2D" type="Light2D" parent="Sprite"]
scale = Vector2( 0.48, 0.48 )
texture = ExtResource( 5 )
energy = 1.5
range_layer_min = -100
range_layer_max = 100

[node name="Position2DFront" type="Position2D" parent="Sprite"]
position = Vector2( 42, 0 )

[node name="Position2DLeft" type="Position2D" parent="Sprite"]
position = Vector2( 20, -36 )
rotation = -0.523599

[node name="Position2DRight" type="Position2D" parent="Sprite"]
position = Vector2( 20, 36 )
rotation = 0.523599

[node name="Position2DBack" type="Position2D" parent="Sprite"]
position = Vector2( -42, 0 )
rotation = 3.14159

[node name="Position2DBackRight" type="Position2D" parent="Sprite"]
position = Vector2( -20, 36 )
rotation = 2.53073

[node name="Position2DBackLeft" type="Position2D" parent="Sprite"]
position = Vector2( -20, -36 )
rotation = -2.53073

[node name="CPUParticles2D" type="CPUParticles2D" parent="Sprite"]
show_behind_parent = true
light_mask = 0
scale = Vector2( 1.00836, 0.462779 )
emitting = false
amount = 15
lifetime = 0.4
local_coords = false
emission_shape = 1
emission_sphere_radius = 2.0
direction = Vector2( 0, 0 )
spread = 30.0
gravity = Vector2( 0, 0 )
scale_amount = 45.0
scale_amount_curve = SubResource( 15 )
color_ramp = SubResource( 16 )

[node name="CPUParticles2D2" type="CPUParticles2D" parent="Sprite"]
position = Vector2( -15.5564, 0 )
amount = 15
lifetime = 0.3
speed_scale = 0.2
randomness = 0.1
emission_shape = 1
emission_sphere_radius = 16.07
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
angular_velocity = 49.32
angular_velocity_random = 1.0
orbit_velocity = 0.3
orbit_velocity_random = 1.0
radial_accel = -50.0
radial_accel_random = 0.04
damping = 100.0
scale_amount = 5.0
scale_amount_curve = SubResource( 17 )
color_ramp = SubResource( 18 )

[node name="BlackHoleCdBar" type="AnimatedSprite" parent="."]
position = Vector2( -13.773, 0 )
rotation = 1.5708
scale = Vector2( 1.76, 1.76 )
frames = SubResource( 23 )

[node name="AimSprite" type="Sprite" parent="."]
texture = ExtResource( 9 )
normal_map = ExtResource( 11 )

[node name="Light2D" type="Light2D" parent="AimSprite"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 5 )
energy = 1.5
range_layer_min = -100
range_layer_max = 100

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/continue = SubResource( 24 )
anims/default = SubResource( 25 )
anims/die = SubResource( 26 )
anims/hit = SubResource( 27 )

[node name="BonusRateTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ChargeTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="ChargeCooldown" type="Timer" parent="."]
one_shot = true

[node name="ImmunityTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="SpinTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="RemoveGunTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="ShootSpecialTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="timeout" from="Camera2D/Timer" to="Camera2D" method="_on_Timer_timeout"]
[connection signal="timeout" from="RemoveGunTimer" to="." method="_on_RemoveGunTimer_timeout"]
